# IRL-WISDOM

./: .gitignore  COPYRIGHT  README.md  pyproject.toml
irl_wisdom/: __init__.py  main.py
irl_wisdom/data/: 48laws.json  biases.json  discipline.json  facts.json  mental_models.json  moai.json  title.ansi  wisdom.json
