[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "irl-wisdom"
version = "2.0.13"
authors = [
  { name="Anika Mukherjee", email="cuteypieanika@gmail.com" },
]
description = "IRL Wisdom™ — daily wisdom, mental models, power laws, and more."
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyperclip>=1.8.0",
    "typer>=0.9.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dev2Creator"
Repository = "https://github.com/Dev2Creator"

[project.scripts]
irl-wisdom = "irl_wisdom.main:app"

[tool.setuptools.package-data]
irl_wisdom = ["data/*.json", "data/*.ansi"]
